# The-Hollow-of-Marrowfall

./: CMakeLists.txt  README.md
include/: character_types.h  enums.h  functions.h  game_constants.h  game_manager.h  hud.h  map_manager.h  map_types.h  menu.h  player.h  renderer.h  types.h
include/items/: item_types.h  items.h
licenses/: ncurses.txt
src/: enemy.c  functions.c  game_manager.c  hud.c  main.c  map_manager.c  menu.c  player.c  renderer.c  save.c
src/data/armor/: armor_effects.csv
src/data/rooms/: startingroom.ck.txt
src/items/: items.c  weapons.c
